ability to register event processor that starts consuming from the last event